# enc-dec-hwscan

./: .gitignore  Cargo.toml  HEADER.txt  README.md  build.gradle.kts  build.rs  commands.sh  gradle.properties  settings.gradle.kts
.github/workflows/: deploy-presentation.yml
bindings/: build.gradle.kts
common/src/: lib.rs  model.rs  support.rs  utils.rs
deployment/: build.gradle.kts
enc-dec-hwscan-bindings/: build.gradle.kts
enc-dec-hwscan-native/: build.gradle.kts  build.rs
enc-dec-hwscan-native/common/: Cargo.toml
enc-dec-hwscan-native/common/src/: model.rs
enc-dec-hwscan-native/nvidia/: build.rs
enc-dec-hwscan-native/nvidia/src/: context.rs  device.rs  dylib.rs  encoder.rs  error.rs  lib.rs
enc-dec-hwscan-native/src/: error.rs  lib.rs  nvidia.rs
enc-dec-hwscan-native/vaapi/: build.rs
enc-dec-hwscan-native/vaapi/src/: device.rs  display.rs  dylib.rs  error.rs  lib.rs
gradle/: libs.versions.toml
integration-test/: build.gradle.kts
native/: Cargo.toml  build.gradle.kts  build.rs
native/common/: Cargo.toml
native/common/src/: lib.rs  model.rs  utils.rs
native/nvidia/: Cargo.toml  build.rs
native/nvidia/src/: context.rs  device.rs  (+4 more)
native/src/: error.rs  lib.rs  nvidia.rs  vaapi.rs
native/vaapi/: Cargo.toml  build.rs
nvidia/: Cargo.toml  build.rs
nvidia/src/: caps.rs  context.rs  device.rs  dll.rs  dylib.rs  encoder.rs  error.rs  lib.rs
presentation/: gulpfile.js  index.html  slides.md
src/: error.rs  lib.rs  vaapi.rs
vaapi/: build.rs
vaapi/include/: va.h
vaapi/src/: device.rs  display.rs  dylib.rs  error.rs  lib.rs
(+44 files in other folders)
