[workspace]
members = ["common", "nvidia"]
resolver = "2"

[package]
name = "enc_dec_hwscan"
version = "0.0.0-SNAPSHOT"
authors = ["Alex Katlein <dev@vemilyus.com>"]
edition = "2021"

[build-dependencies]
cbindgen = "^0.26.0"

[dependencies]
common = { path = "./common" }
nvidia = { path = "./nvidia" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
